--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #logging.path=.
-
 spring.thymeleaf.cache=false
-
-mybatis.config-location=classpath:mybatis.xml
-
+# DB
 spring.datasource.sql-script-encoding=utf-8
-
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+spring.datasource.name=sa
+spring.datasource.password=sa
 spring.h2.console.enabled=true
-
+# Doma2
+doma.dialect=POSTGRES
+doma.naming=SNAKE_LOWER_CASE
