--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "clean": "rimraf ./dist ./coverage"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
