--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,24 +1,11 @@
-.DS_Store
+# dependencies
 node_modules
-/dist
 
-/tests/e2e/reports/
-selenium-debug.log
+# logs
+npm-debug.log
 
-# local env files
-.env.local
-.env.*.local
+# Nuxt build
+.nuxt
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+# Nuxt generate
+dist
