--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.0.BUILD-SNAPSHOT'
+        springBootVersion = '2.1.6.RELEASE'
         encoding = 'UTF-8'
-        compatibility = 1.8
+        compatibility = 1.11
     }
     repositories {
         jcenter()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
@@ -30,12 +28,7 @@ targetCompatibility = compatibility
 
 repositories {
     jcenter()
-    maven { url "https://repo.spring.io/snapshot" }
-    maven { url "https://repo.spring.io/milestone" }
 }
-
-ext['thymeleaf-layout-dialect.version'] = '2.3.0'
-ext['thymeleaf.version'] = '3.0.9.RELEASE'
 
 node {
     version = '10.16.0'
