--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,16 @@ buildscript {
     }
     repositories {
         jcenter()
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("com.moowork.gradle:gradle-node-plugin:1.3.1")
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.moowork.node'
+plugins {
+    id 'java'
+    id 'idea'
+    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'com.moowork.node' version '1.3.1'
+}
 
 group = 'com.github.kazuhito_m'
 version = '0.0.1-SNAPSHOT'
@@ -57,7 +54,6 @@ sourceSets {
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにし、コンパイルより前にSQLファイルを出力先ディレクトリにコピーする。
 processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
-
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
