--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         springBootVersion = '2.1.6.RELEASE'
         encoding = 'UTF-8'
         compatibility = 1.11
+        aspectjVersion = '1.9.4'
     }
     repositories {
         jcenter()
@@ -15,6 +16,7 @@ plugins {
     id 'org.springframework.boot' version '2.1.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.moowork.node' version '1.3.1'
+    id "aspectj.AspectjGradlePlugin" version "0.0.3"  // 本来は"aspectj.gradle"が使いたいが、Gradle5に対応していないらしいので代用
 }
 
 group = 'com.github.kazuhito_m'
@@ -54,6 +56,7 @@ sourceSets {
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにし、コンパイルより前にSQLファイルを出力先ディレクトリにコピーする。
 processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
+compileAspect.dependsOn processResources
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
