--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,4 @@
+# main database connection.
 main.datasource.driver-class-name=org.h2.Driver
 main.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 main.datasource.name=sa
