bugfix: 「保存するIPアドレスが、IPV6フォーマットに成る」の対策として、gradleでbootRunだけ対応。
根治ではない。本番での挙動を観て、Docker等に設定しないと解決はしないだろう。

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ sourceSets {
     }
 }
 
+bootRun {
+    jvmArgs = ["-Djava.net.preferIPv4Stack=true"]
+}
+
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにし、コンパイルより前にSQLファイルを出力先ディレクトリにコピーする。
 processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
