implemnt: 「DataSourceの設定を自力でする」箇所と「アプリの設定にPath書いといて、別のファイルから設定読む」の「雛形」くらいを実装。
実際に「Driverや接続文字列を拾ってくる」箇所は、固定文字で仮実装。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 # Doma2
 doma.dialect=POSTGRES
 doma.naming=SNAKE_LOWER_CASE
+# other config(outside file)
+environment.config.path=./config.properties
