--- a/config.properties
+++ b/config.properties
@@ -2,4 +2,9 @@
 main.datasource.driver-class-name=org.h2.Driver
 main.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 main.datasource.name=sa
-main.datasource.password=sa
+main.datasource.password=
+# log database connection.
+log.datasource.driver-class-name=org.h2.Driver
+log.datasource.url=jdbc:h2:mem:logdb;MODE=PostgreSQL
+log.datasource.name=sa
+log.datasource.password=
