refactor: テスト用のメインとなるDB名を変更。

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 # main database connection.
 main.datasource.driver-class-name=org.h2.Driver
-main.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+main.datasource.url=jdbc:h2:mem:maindb;MODE=PostgreSQL
 main.datasource.username=sa
 main.datasource.password=
 # log database connection.
