implement: Flywayで2つのデータソース、2つのマイグレーション設定で、SpringBoot起動時にマイグレーションを行う設定を付与。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ doma.dialect=POSTGRES
 doma.naming=SNAKE_LOWER_CASE
 # other config(outside file)
 environment.config.path=./config.properties
+# maindb migrate config
+maindb.flyway.locations=classpath:db/migration/maindb
+maindb.flyway.enabled=true
+# logdb migrate config
+logdb.flyway.locations=classpath:db/migration/logdb
+logdb.flyway.enabled=true
