settings: idea pluginの設定を行う。

--- a/build.gradle
+++ b/build.gradle
@@ -75,3 +75,5 @@ dependencies {
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
+
+idea.module.inheritOutputDirs = true
