--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.moowork.node' version '1.3.1'
     id "aspectj.AspectjGradlePlugin" version "0.0.3"  // 本来は"aspectj.gradle"が使いたいが、Gradle5に対応していないらしいので代用
+    id "org.dddjava.jig-gradle-plugin" version "2019.7.1.1"
 }
 
 group = 'com.github.kazuhito_m'
