implement: 「外部から指定できるスタートアップSQL」を設定・実行できる仕組みを追加。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ maindb.flyway.enabled=true
 # logdb migrate config
 logdb.flyway.locations=classpath:db/migration/logdb
 logdb.flyway.enabled=true
+# execute sql files when startup.(comma separator)
+maindb.startup.sql.paths=startup-data.sql,startup-seccond-data.sql
